--- a/secciones/cuidados.html
+++ b/secciones/cuidados.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./secciones/cuidados.html">Cuidados</a>
+                        <a class="nav-link active" aria-current="page" href="./cuidados.html">Cuidados</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Especificaciones</a>
