Adaptacion segunda entrega

--- a/index.html
+++ b/index.html
@@ -40,41 +40,43 @@
 
     <div class="row mt-3">
         <div class="col-lg-6">
-            <section class="text-center fs-3">
+            <section class="text-center fs-1 texto">
                 Somos una pagina dedicada al cuidado responsable de la popular mascota el pez betta, y esperamos que tu
-                experiencia aprendiendo a criar este tipo de pez, te ayude a poder mantener este ejemplar en tu acuario...etc
-                etc etc por ahora sera lorem.
+                experiencia aprendiendo a criar este tipo de pez, te ayude a poder mantener este ejemplar en tu acuario.
             </section>
         </div>
         <div class="col-lg-6">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./multimedia/img/beta2.jpg" class="d-block w-100" alt="...">
+            <div class="container">
+                <div id="carouselExampleControls" class="carousel slide carrucel" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./multimedia/img/beta1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./multimedia/img/beta2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./multimedia/img/beta3.jpg" class="d-block w-100" alt="...">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="./multimedia/img/beta2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./multimedia/img/beta3.jpg" class="d-block w-100" alt="...">
-                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
+            
         </div>
     </div>
 
-    <section class="text-center fs-2 mt-4">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla eligendi, dolor error ea, repudiandae mollitia laudantium sed rerum sequi accusantium quod! Aspernatur consectetur obcaecati commodi consequuntur odio delectus earum Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus doloribus cupiditate dolor delectus, quaerat consequatur quis nobis pariatur perferendis eveniet neque cum velit, dignissimos quae fuga? Molestias quisquam facilis temporibus.
+    <section class="text-center fs-2 mt-4 texto">
+        A continuacion se le brindaran una serie de consejos e indicaciones sobre como mantener a tu pez, recuerde siempre que cada animal es distinto y puede que unos coman mas que otros, o que algunos puedan convivir con mas peces sin causar inconvenientes, por ende recordamos que esto es un compilado de informacion general sacado de la experiencia y el hobby dedicado durante los años.
     </section>
 
 
