--- a/secciones/cuidados.html
+++ b/secciones/cuidados.html
@@ -40,32 +40,33 @@
 
     <div class="row mt-2">
 
-        <div class="col-lg-4 d-flex justify-content-center mb-4">
+        <div class="col-lg-4 d-flex justify-content-center mt-5">
+
             <div class="card" style="width: 18rem;">
                 <img src="../multimedia/img/betaAgua.png" class="card-img-top" alt="beta intoxicado">
                 <div class="card-body celeste">
                     <h5 class="card-title">Manten siempre el agua limpia</h5>
-                    <p class="card-text">A diferencia de la creencia popular a los betas les afecta como a cualquier otro pez las condiciones del agua Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore laudantium voluptates sint laborum amet ab debitis porro! Modi provident explicabo consectetur earum! Provident dolores optio unde, qui commodi recusandae ab!</p>
+                    <p class="card-text">A diferencia de la creencia popular a los betas les afecta como a cualquier otro pez las condiciones del agua, un sistema de filtrado es nesesario para que el agua no se intoxique con los desechos de nuestro pez, esta de mas recordar que como con todo pez, el ciclado del agua es un requerimento clave para poder mantener una calidad de agua decente.</p>
                 </div>
             </div>
         </div>
 
-        <div class="col-lg-4 d-flex justify-content-center mb-4">
+        <div class="col-lg-4 d-flex justify-content-center mt-5">
             <div class="card" style="width: 18rem;">
                 <img src="../multimedia/img/betaComida.png" class="card-img-top" alt="beta con mucha comida">
                 <div class="card-body celeste">
                     <h5 class="card-title">No sobrealimentes a tu pez</h5>
-                    <p class="card-text">El error mas comun para los dueños nuevos es darle alimento en exeso a tu mascota Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quam, id quasi suscipit nemo, voluptatum consectetur dolorem sunt placeat quidem accusantium eaque labore tempora vero facere explicabo magnam expedita enim!</p>
+                    <p class="card-text">El error mas comun para los dueños nuevos es darle alimento en exeso a tu mascota, si notas que cuando le das de comer, excreta inmediatamente de color del alimentoq que le diste, es que el pez se lleno y al ser los organos del pez rectos, excreta lo q acaba de comer, indicando un claro exceso de alimento.</p>
                 </div>
             </div>
         </div>
 
-        <div class="col-lg-4 d-flex justify-content-center mb-4">
+        <div class="col-lg-4 d-flex justify-content-center mt-5">
             <div class="card" style="width: 18rem;">
                 <img src="../multimedia/img/betaCompañero.png" class="card-img-top" alt="beta enojado">
                 <div class="card-body celeste">
                     <h5 class="card-title">Compañeros de acuario</h5>
-                    <p class="card-text">Los peces bettas son peces territoriales, atacaran a cualquier otro macho con el cual compartan espacio Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit magni modi nam beatae consectetur ullam, sequi maiores iure eligendi. Sequi, cumque dolorem numquam iure eius adipisci tempore suscipit architecto officiis.</p>
+                    <p class="card-text">Los peces bettas son peces territoriales, atacaran a cualquier otro macho con el cual compartan espacio sera un objetivo de peleas, tambien pueden ser agresivos con otras especies de aleta larga, como el conocido guppy, por ende no se recomienda mantener esta especie con bettas.</p>
                 </div>
             </div>
         </div>
